--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,5 +16,7 @@ jobs:
     steps:
       - name: Review PR
         uses: vermwestling/pull-request-reviewer@main
+        with:
+          api-endpoint: 'https://my-api-endpoint.com'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
