Call chat completions api

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Review PR
         uses: vermwestling/pull-request-reviewer@main
         with:
-          api-endpoint: 'https://my-api-endpoint.com'
+          api-endpoint: 'https://2334-158-174-44-98.ngrok-free.app/v1/chat/completions'
+          model: 'codestral'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
