--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,10 +14,14 @@ jobs:
       contents: write
     name: Pull Request Reviewer
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
       - name: Review PR
-        uses: vermwestling/pull-request-reviewer@main
+        uses: vermwestling/test-action@main
         with:
           api-endpoint: 'https://2334-158-174-44-98.ngrok-free.app/v1/chat/completions'
           model: 'codestral'
+          review-type: 'File comment'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
