--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,6 +22,6 @@ jobs:
         with:
           api-endpoint: 'https://2334-158-174-44-98.ngrok-free.app/v1/chat/completions'
           model: 'codestral'
-          review-type: 'PR comment'
+          review-type: 'File comment'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
