Make api-endpint parameter optional

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Reviews GitHub pull requests'
 inputs:
   api-endpoint:
     description: "The URL to then API endpoint."
-    required: true
+    required: false
     default: "https://api.openai.com/v1/chat/completions"
   api-key:
     description: "The API key to use for the API endpoint."
