--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Review PR
         uses: vermwestling/pull-request-reviewer@main
         with:
-          api-endpoint: 'https://542a-92-34-18-167.ngrok-free.app/v1/chat/completions'
-          model: 'qwen2.5-coder:32b'
-          review-type: 'File comment'
+          api-key: ${{ secrets.OPENAI_API_KEY }}
+          model: 'gpt-4o'
+          review-type: 'PR comment'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
