--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,6 +22,6 @@ jobs:
         with:
           api-endpoint: 'https://542a-92-34-18-167.ngrok-free.app/v1/chat/completions'
           model: 'deepseek-coder-v2'
-          review-type: 'PR comment'
+          review-type: 'File comment'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
